build_errors_2.txt
g++ : In file included from 
src/ui/Inspector.hpp:5,
En línea: 1 Carácter: 1
+ g++ src/main.cpp 
src/physics/PhysicsEngine.cpp 
src/physics/SpatialGri ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpeci 
   fied: (In file include...nspector.  
  hpp:5,:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCo 
   mmandError
 
                 from src/main.cpp:18:
src/chemistry/Molecule.hpp:6:8: error: 
redefinition of 'struct Molecule'
    6 | struct Molecule {
      |        ^~~~~~~~
In file included from src/physics/../ch
emistry/ChemistryDatabase.hpp:5,
                 from 
src/physics/BondingSystem.hpp:5,
                 from src/main.cpp:10:
src/physics/../chemistry/Molecule.hpp:6
:8: note: previous definition of 
'struct Molecule'
    6 | struct Molecule {
      |        ^~~~~~~~
In file included from 
src/ui/Quimidex.hpp:6,
                 from src/main.cpp:22:
src/ui/../chemistry/Molecule.hpp:6:8: 
error: redefinition of 'struct 
Molecule'
    6 | struct Molecule {
      |        ^~~~~~~~
src/physics/../chemistry/Molecule.hpp:6
:8: note: previous definition of 
'struct Molecule'
    6 | struct Molecule {
      |        ^~~~~~~~
src/main.cpp: In function 'int main()':
src/main.cpp:135:32: error: 
'MathUtils' has not been declared
  135 |             auto composition = 
MathUtils::scanMoleculeComposition(play
er.getTractor().getTargetIndex(), 
world.states, world.atoms);
      |                                
^~~~~~~~~
In file included from 
src/physics/BondingSystem.cpp:3:
src/core/MathUtils.hpp: In function 
'std::map<int, int> MathUtils::scanMole
culeComposition(int, const 
std::vector<StateComponent>&, const 
std::vector<AtomComponent>&)':
src/core/MathUtils.hpp:19:22: error: 
'findMoleculeRoot' was not declared in 
this scope
   19 |         int rootId = 
findMoleculeRoot(entityId, states);
      |                      
^~~~~~~~~~~~~~~~
src/physics/BondingSystem.cpp: In 
static member function 'static 
BondingSystem::BondError 
BondingSystem::tryBond(int, int, 
std::vector<StateComponent>&, const 
std::vector<AtomComponent>&, const 
std::vector<TransformComponent>&, 
bool)':
src/physics/BondingSystem.cpp:49:32: 
error: 'findMoleculeRoot' is not a 
member of 'MathUtils'
   49 |     int molRootId = 
MathUtils::findMoleculeRoot(targetId, 
states);
      |                                
^~~~~~~~~~~~~~~~
src/physics/BondingSystem.cpp:54:24: 
error: 'findMoleculeRoot' is not a 
member of 'MathUtils'
   54 |         if 
(MathUtils::findMoleculeRoot(i, 
states) == molRootId) {
      |                        
^~~~~~~~~~~~~~~~
src/physics/BondingSystem.cpp: In 
static member function 'static void Bon
dingSystem::updateSpontaneousBonding(st
d::vector<StateComponent>&, const 
std::vector<AtomComponent>&, const 
std::vector<TransformComponent>&, 
int)':
src/physics/BondingSystem.cpp:293:60: 
error: 'findMoleculeRoot' is not a 
member of 'MathUtils'
  293 |     int tractedRoot = 
(tractedEntityId != -1) ? MathUtils::fi
ndMoleculeRoot(tractedEntityId, 
states) : -1;
      |                                
                            
^~~~~~~~~~~~~~~~
src/physics/BondingSystem.cpp:299:45: 
error: 'findMoleculeRoot' is not a 
member of 'MathUtils'
  299 |         if (tractedRoot != -1 
&& MathUtils::findMoleculeRoot(i, 
states) == tractedRoot) continue;
      |                                
             ^~~~~~~~~~~~~~~~
src/physics/BondingSystem.cpp:311:40: 
error: 'findMoleculeRoot' is not a 
member of 'MathUtils'
  311 |                 int rootI = 
MathUtils::findMoleculeRoot(i, states);
      |                                
        ^~~~~~~~~~~~~~~~
src/physics/BondingSystem.cpp:312:40: 
error: 'findMoleculeRoot' is not a 
member of 'MathUtils'
  312 |                 int rootJ = 
MathUtils::findMoleculeRoot(j, states);
      |                                
        ^~~~~~~~~~~~~~~~
In file included from 
src/gameplay/Player.cpp:6:
src/gameplay/../core/MathUtils.hpp: In 
function 'std::map<int, int> MathUtils:
:scanMoleculeComposition(int, const 
std::vector<StateComponent>&, const 
std::vector<AtomComponent>&)':
src/gameplay/../core/MathUtils.hpp:19:2
2: error: 'findMoleculeRoot' was not 
declared in this scope
   19 |         int rootId = 
findMoleculeRoot(entityId, states);
      |                      
^~~~~~~~~~~~~~~~
src/gameplay/Player.cpp: In member 
function 'void Player::applyPhysics(std
::vector<TransformComponent>&, 
std::vector<StateComponent>&, const 
std::vector<AtomComponent>&)':
src/gameplay/Player.cpp:85:40: error: 
'findMoleculeRoot' is not a member of 
'MathUtils'
   85 |             int targetIdx = 
MathUtils::findMoleculeRoot(idx, 
states);
      |                                
        ^~~~~~~~~~~~~~~~
In file included from 
src/ui/Quimidex.hpp:6,
                 from 
src/ui/Quimidex.cpp:1:
src/ui/../chemistry/Molecule.hpp:6:8: 
error: redefinition of 'struct 
Molecule'
    6 | struct Molecule {
      |        ^~~~~~~~
In file included from src/ui/../chemist
ry/ChemistryDatabase.hpp:5,
                 from 
src/ui/Quimidex.hpp:5:
src/ui/../chemistry/Molecule.hpp:6:8: 
note: previous definition of 'struct 
Molecule'
    6 | struct Molecule {
      |        ^~~~~~~~
src/ui/Quimidex.cpp: In constructor 
'Quimidex::Quimidex()':
src/ui/Quimidex.cpp:7:29: error: no 
matching function for call to 'std::vec
tor<Molecule>::push_back(<brace-enclose
d initializer list>)'
    7 |     knownMolecules.push_back({
      |     ~~~~~~~~~~~~~~~~~~~~~~~~^~
    8 |         "H2O", "Agua", "H2O1", 
"VITAL",
      |         
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    9 |         "La mol├®cula de la 
vida. ├Ünica sustancia que existe 
naturalmente en los 3 estados en la 
Tierra.",
      |         ~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   10 |         "60-70% de la masa de 
un humano adulto. Solvente universal 
donde ocurre toda la bioqu├¡mica.",
      |         ~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   11 |         "Fusi├│n de carbono y 
helio en estrellas masivas.",
      |         ~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~
   12 |         {{1, 2}, {8, 1}}
      |         ~~~~~~~~~~~~~~~~     
   13 |     });
      |     ~~                       
src/ui/Quimidex.cpp:7:29: note: there 
are 2 candidates
In file included from C:/msys64/mingw64
/include/c++/15.2.0/vector:68,
                 from 
src/ui/../chemistry/Element.hpp:6,
                 from src/ui/../chemist
ry/ChemistryDatabase.hpp:4:
C:/msys64/mingw64/include/c++/15.2.0/bi
ts/stl_vector.h:1416:7: note: 
candidate 1: 'void std::vector<_Tp, 
_Alloc>::push_back(const value_type&) 
[with _Tp = Molecule; _Alloc = 
std::allocator<Molecule>; value_type = 
Molecule]'
 1416 |       push_back(const 
value_type& __x)
      |       ^~~~~~~~~
C:/msys64/mingw64/include/c++/15.2.0/bi
ts/stl_vector.h:1416:35: note: no 
known conversion for argument 1 from 
'<brace-enclosed initializer list>' to 
'const 
std::vector<Molecule>::value_type&' 
{aka 'const Molecule&'}
 1416 |       push_back(const 
value_type& __x)
      |                 
~~~~~~~~~~~~~~~~~~^~~
C:/msys64/mingw64/include/c++/15.2.0/bi
ts/stl_vector.h:1433:7: note: 
candidate 2: 'void std::vector<_Tp, 
_Alloc>::push_back(value_type&&) [with 
_Tp = Molecule; _Alloc = 
std::allocator<Molecule>; value_type = 
Molecule]'
 1433 |       push_back(value_type&& 
__x)
      |       ^~~~~~~~~
C:/msys64/mingw64/include/c++/15.2.0/bi
ts/stl_vector.h:1433:30: note: no 
known conversion for argument 1 from 
'<brace-enclosed initializer list>' to 
'std::vector<Molecule>::value_type&&' 
{aka 'Molecule&&'}
 1433 |       push_back(value_type&& 
__x)
      |                 
~~~~~~~~~~~~~^~~
src/ui/Quimidex.cpp:15:29: error: no 
matching function for call to 'std::vec
tor<Molecule>::push_back(<brace-enclose
d initializer list>)'
   15 |     knownMolecules.push_back({
      |     ~~~~~~~~~~~~~~~~~~~~~~~~^~
   16 |         "H2", "Hidr├│geno 
Diat├│mico", "H2", "PRIMORDIAL",
      |         ~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~
   17 |         "La forma m├ís simple 
de mol├®cula covalente.",
      |         ~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
   18 |         "Combustible estelar y 
precursor de toda la qu├¡mica 
compleja.",
      |         ~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~
   19 |         "Big Bang y nubes 
moleculares fr├¡as.",
      |         
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   20 |         {{1, 2}}
      |         ~~~~~~~~             
   21 |     });
      |     ~~                       
src/ui/Quimidex.cpp:15:29: note: there 
are 2 candidates
C:/msys64/mingw64/include/c++/15.2.0/bi
ts/stl_vector.h:1416:7: note: 
candidate 1: 'void std::vector<_Tp, 
_Alloc>::push_back(const value_type&) 
[with _Tp = Molecule; _Alloc = 
std::allocator<Molecule>; value_type = 
Molecule]'
 1416 |       push_back(const 
value_type& __x)
      |       ^~~~~~~~~
C:/msys64/mingw64/include/c++/15.2.0/bi
ts/stl_vector.h:1416:35: note: no 
known conversion for argument 1 from 
'<brace-enclosed initializer list>' to 
'const 
std::vector<Molecule>::value_type&' 
{aka 'const Molecule&'}
 1416 |       push_back(const 
value_type& __x)
      |                 
~~~~~~~~~~~~~~~~~~^~~
C:/msys64/mingw64/include/c++/15.2.0/bi
ts/stl_vector.h:1433:7: note: 
candidate 2: 'void std::vector<_Tp, 
_Alloc>::push_back(value_type&&) [with 
_Tp = Molecule; _Alloc = 
std::allocator<Molecule>; value_type = 
Molecule]'
 1433 |       push_back(value_type&& 
__x)
      |       ^~~~~~~~~
C:/msys64/mingw64/include/c++/15.2.0/bi
ts/stl_vector.h:1433:30: note: no 
known conversion for argument 1 from 
'<brace-enclosed initializer list>' to 
'std::vector<Molecule>::value_type&&' 
{aka 'Molecule&&'}
 1433 |       push_back(value_type&& 
__x)
      |                 
~~~~~~~~~~~~~^~~
